--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,6 @@ jobs:
           echo HEAD_REF $GITHUB_HEAD_REF
           echo REF $GITHUB_REF
           echo REF_NAME $GITHUB_REF_NAME
-          git diff-tree --no-commit-id -r $GITHUB_SHA
+          git diff-tree --no-commit-id -r $GITHUB_HEAD_REF
           git show --name-only --pretty=format:
         shell: bash
