--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,6 @@ jobs:
           echo HEAD_REF $GITHUB_HEAD_REF
           echo REF $GITHUB_REF
           echo REF_NAME $GITHUB_REF_NAME
-          git diff-tree --no-commit-id -r ${{ github.event.pull_request.base.sha }}
+          git diff-tree --no-commit-id -r ${{ github.event.pull_request.head.sha }}
           git show --name-only --pretty=format:
         shell: bash
